# pathlib

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
cmake/Modules/: CCache.cmake  ColorDiagnostics.cmake
examples/: CMakeLists.txt
examples/basename/: CMakeLists.txt  main.cpp
scripts/: create-example.py
src/include/pathlib/: annotations.hpp  assertions.hpp  pure_path.hpp
src/include/pathlib/utils/: string_utils.hpp
src/lib/pathlib/: annotations.cpp  assertions.cpp  pure_path.cpp
src/lib/pathlib/utils/: string_utils.cpp
tests/: 001_pure_posix_path.t.cpp  CMakeLists.txt
tests/utils/: 001_string_utils.t.cpp
